[tool.poetry]
name = "toeic4all-flask"
version = "0.1.0"
description = ""
authors = ["ruo <comsa333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
flask-jwt-extended = "^4.5.2"
flask-cors = "^3.0.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
